# BunjiLearn

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  a.out  config.h.in  main.cpp
.github/workflows/: build.yml  buildtest.yml
api/: CMakeLists.txt  api.cpp
bunjilearn/: CMakeLists.txt
bunjilearn/dataset/: CMakeLists.txt  dataset.cpp
bunjilearn/dataset/include/: dataset.hpp
bunjilearn/layers/: CMakeLists.txt  activation.cpp  convolution.cpp  dense.cpp  dropout.cpp  flatten.cpp  layer.cpp  pool.cpp
bunjilearn/layers/include/: activation.hpp  convolution.hpp  dense.hpp  dropout.hpp  flatten.hpp  layer.hpp  pool.hpp
bunjilearn/metrics/: CMakeLists.txt  loss.cpp  metric.cpp
bunjilearn/metrics/include/: loss.hpp  metric.hpp
bunjilearn/model/: CMakeLists.txt  network.cpp  trainer.cpp
bunjilearn/model/include/: network.hpp  trainer.hpp
bunjilearn/util/: CMakeLists.txt  progress_bar.cpp
bunjilearn/util/include/: log.hpp  progress_bar.hpp  tensor.hpp
mains/: main.cpp  tensor_test.cpp
scripts/: assemble_db.py  compile.sh  dim_convert.py  example.py  jsonconv.py
src/: activation.cpp  dataset.cpp  dense.cpp  flatten.cpp  loss.cpp  main.cpp  network.cpp  trainer.cpp
src/include/: activation.hpp  dense.hpp  flatten.hpp  layer.hpp  loss.hpp  network.hpp  trainer.hpp
tests/: CMakeLists.txt
